docs/content/v1.0/manage/enterprise-edition/_index.md
---
title: Enterprise Edition
linkTitle: Enterprise Edition
description: Enterprise Edition
image: /images/section_icons/manage/enterprise.png
headcontent: Manage YugaByte DB without any downtime using YugaByte EE's built-in orchestration and monitoring.
aliases:
  - /manage/enterprise-edition/
menu:
  v1.0:
    identifier: manage-enterprise-edition
    parent: manage
    weight: 710
---

Universe is a set of YugaByte DB nodes grouped together to form one logical distributed database. These nodes contain YugaByte software installed on the underlying IaaS instances.

<div class="row">
  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="create-universe-multi-zone/">
      <div class="head">
        <img class="icon" src="/images/section_icons/manage/enterprise/create_universe.png" aria-hidden="true" />
        <div class="title">Create Universe - Multi-Zone</div>
      </div>
      <div class="body">
        Create YugaByte DB universes in one region across multiple zones using YugaByte Admin Console's intent-driven orchestration.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="create-universe-multi-region/">
      <div class="head">
        <img class="icon" src="/images/section_icons/manage/enterprise/create_universe.png" aria-hidden="true" />
        <div class="title">Create Universe - Multi-Region</div>
      </div>
      <div class="body">
        Create YugaByte DB universes in multiple regions using YugaByte Admin Console's intent-driven orchestration.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="edit-universe/">
      <div class="head">
        <img class="icon" src="/images/section_icons/manage/enterprise/edit_universe.png" aria-hidden="true" />   
        <div class="title">Edit Universe</div>
      </div>
      <div class="body">
        Expand, shrink and reconfigure universes without any downtime.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="edit-config/">
      <div class="head">
        <img class="icon" src="/images/section_icons/manage/enterprise/edit_flags.png" aria-hidden="true" />    
        <div class="title">Edit Config Flags</div>
      </div>
      <div class="body">
        Change the config flags for universes in a rolling manner without any application impact.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="upgrade-universe/">
      <div class="head">
        <img class="icon" src="/images/section_icons/manage/enterprise/upgrade_universe.png" aria-hidden="true" />   
        <div class="title">Upgrade Universe</div>
      </div>
      <div class="body">
        Upgrade universes in a rolling manner without any application impact.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="delete-universe/">
      <div class="head">
        <img class="icon" src="/images/section_icons/manage/enterprise/delete_universe.png" aria-hidden="true" /> 
        <div class="title">Delete Universe</div>
      </div>
      <div class="body">
        Delete unwanted universes to free up infrastructure capacity.
      </div>
    </a>
  </div>
</div>
